--- a/src/index.scss
+++ b/src/index.scss
@@ -4,6 +4,7 @@
 @import "style-helpers/font-face";
 @import "style-helpers/mixins";
 @import "style-helpers/typografy";
-// LoadingSpinner
+
 @import "component/view/homePage/index";
 @import "component/widget/LoadingSpinner/index";
+@import "component/layout/header/index";
