--- a/src/style-helpers/typografy.scss
+++ b/src/style-helpers/typografy.scss
@@ -5,8 +5,8 @@ html * {
 body {
     padding: 0;
     margin: 0;
-    font-family: $defaultFont;
-    background: url($imagesPath + "memphis-colorful.png");
+    background: #f1f1ee;
+    color: #53555c;
 }
 
 .hidden {
