Work on Map and some other stuff

--- a/src/index.scss
+++ b/src/index.scss
@@ -8,3 +8,4 @@
 @import "component/view/homePage/index";
 @import "component/widget/LoadingSpinner/index";
 @import "component/layout/header/index";
+@import "component/widget/ImageBox/index";
