--- a/src/index.scss
+++ b/src/index.scss
@@ -6,6 +6,10 @@
 @import "style-helpers/typografy";
 
 @import "component/view/homePage/index";
+@import "component/view/whowearePage/index";
 @import "component/widget/LoadingSpinner/index";
 @import "component/layout/header/index";
+@import "component/layout/wrapper/index";
 @import "component/widget/ImageBox/index";
+@import "component/widget/EventBox/index";
+@import "component/widget/ServiceBox/index";
