--- a/src/component/widget/ImageBox/index.scss
+++ b/src/component/widget/ImageBox/index.scss
@@ -5,10 +5,12 @@
     margin-right: 10px;
     position: relative;
     height: 350px;
+    width: 380px;
 
     .image-box-cross {
         background: url($imagesPath + "cross.jpg") center center no-repeat;
         background-size: contain;
+        background-position-y: 27px;
         position: absolute;
         height: 100%;
         width: 100%;
