--- a/src/component/layout/header/index.scss
+++ b/src/component/layout/header/index.scss
@@ -72,3 +72,91 @@
     }
 }
 }
+
+.header_w{
+    background: url($imagesPath + "tree-growing-in-hands1.jpg") center center no-repeat;
+    height: 500px;
+    background-size: cover;
+    background-attachment: fixed;
+    width: 100%;
+
+    .header-church--sticky {
+        position: fixed;
+        width: 100%;
+        background: white;
+        transition: background .25s;
+        display: ruby;
+        z-index: 1000;
+
+
+        .menu-navigation {
+            text-align: center;
+            
+            h3 {
+                color: black;
+            }
+        }
+    }
+
+    .menu-navigation {
+        text-align: center;
+    }
+}
+.header_v {
+    background: url($imagesPath + "vizija.jpg") center center no-repeat;
+    height: 500px;
+    background-size: cover;
+    background-attachment: fixed;
+    width: 100%;
+
+    .header-church--sticky {
+        position: fixed;
+        width: 100%;
+        background: white;
+        transition: background .25s;
+        display: ruby;
+        z-index: 1000;
+
+
+        .menu-navigation {
+            text-align: center;
+            
+            h3 {
+                color: black;
+            }
+        }
+    }
+
+    .menu-navigation {
+        text-align: center;
+    }
+}
+.header_c {
+    background: url($imagesPath + "our_believe.jpg") center center no-repeat;
+    height: 500px;
+    background-size: cover;
+    background-attachment: fixed;
+    width: 100%;
+
+    .header-church--sticky {
+        position: fixed;
+        width: 100%;
+        background: white;
+        transition: background .25s;
+        display: ruby;
+        z-index: 1000;
+
+
+        .menu-navigation {
+            text-align: center;
+            
+            h3 {
+                color: black;
+            }
+        }
+    }
+
+    .menu-navigation {
+        text-align: center;
+    }
+}
