--- a/src/index.scss
+++ b/src/index.scss
@@ -13,3 +13,6 @@
 @import "component/widget/ImageBox/index";
 @import "component/widget/EventBox/index";
 @import "component/widget/ServiceBox/index";
+@import "component/widget/WhoWeAreBox/index";
+@import "component/widget/VisionBox/index";
+@import "component/widget/CredoBox/index";
