--- a/src/component/view/homePage/index.scss
+++ b/src/component/view/homePage/index.scss
@@ -54,4 +54,28 @@ main {
 body {
     background: #f5f5f5;
 }
-
+.vision {
+    .naslov1, .naslov2{
+        font-size: 50px;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        font-style: oblique;
+        color: #d9dbdb;
+        text-shadow: 3px 3px 6px #000000;
+    }
+    .naslov2 {
+        margin-left: 100px;
+}
+}
+.credo {
+    background: #c09d7a;
+    .naslov1, .naslov2{
+        font-size: 50px;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        font-style: oblique;
+        color: #d9dbdb;
+        text-shadow: 3px 3px 6px #000000;
+    }
+    .naslov2 {
+        margin-left: 100px;
+}
+}
