--- a/src/component/view/homePage/index.scss
+++ b/src/component/view/homePage/index.scss
@@ -1,5 +1,6 @@
 main {
     position: relative;
+    width: 100%;
     article {
         margin-top: -330px;
         margin-left: 100px;
@@ -54,6 +55,7 @@ main {
 body {
     background: #f5f5f5;
 }
+
 .vision {
     .naslov1, .naslov2{
         font-size: 50px;
@@ -73,6 +75,19 @@ body {
         font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
         font-style: oblique;
         color: #d9dbdb;
+        text-shadow: 3px 3px 6px #000000;
+    }
+    .naslov2 {
+        margin-left: 100px;
+}
+}
+.pastor {
+    background: #cdfad3;
+    .naslov1, .naslov2{
+        font-size: 50px;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        font-style: oblique;
+        color: #b3f0bb;
         text-shadow: 3px 3px 6px #000000;
     }
     .naslov2 {
