--- a/src/component/view/homePage/index.scss
+++ b/src/component/view/homePage/index.scss
@@ -68,7 +68,7 @@ body {
         margin-left: 100px;
 }
 }
-.credo {
+.credos {
     background: #c09d7a;
     .naslov1, .naslov2{
         font-size: 50px;
@@ -81,7 +81,7 @@ body {
         margin-left: 100px;
 }
 }
-.pastor {
+.pastors {
     background: #cdfad3;
     .naslov1, .naslov2{
         font-size: 50px;
