--- a/src/component/view/homePage/index.scss
+++ b/src/component/view/homePage/index.scss
@@ -94,3 +94,16 @@ body {
         margin-left: 100px;
 }
 }
+.activities {
+    background: #dff2f8;
+    .naslov1, .naslov2{
+        font-size: 50px;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        font-style: oblique;
+        color: #b3f0bb;
+        text-shadow: 3px 3px 6px #000000;
+    }
+    .naslov2 {
+        margin-left: 100px;
+}
+}
