--- a/src/index.scss
+++ b/src/index.scss
@@ -16,3 +16,4 @@
 @import "component/widget/VisionBox/index";
 @import "component/widget/CredoBox/index";
 @import "component/widget/PastorBox/index";
+@import "component/widget/ActivityBox/index";
