--- a/src/index.scss
+++ b/src/index.scss
@@ -17,3 +17,5 @@
 @import "component/widget/CredoBox/index";
 @import "component/widget/PastorBox/index";
 @import "component/widget/ActivityBox/index";
+@import "component/widget/HumanityBox/index";
+@import "component/widget/ContactBox/index";
