--- a/src/component/layout/header/index.scss
+++ b/src/component/layout/header/index.scss
@@ -68,6 +68,23 @@
         background-attachment: fixed;
         width: 100%;
     }
+    &.humanity {
+        background: url($imagesPath + "LoveGod_LoveOthers.jpg") center center no-repeat;
+        height: 600px;
+        background-size: cover;
+        background-attachment: fixed;
+        width: 100%;
+    }
+    &.contact {
+        background: none;
+        height: 50px;
+        background-size: cover;
+        background-attachment: fixed;
+        width: 100%;
+    }
+    &.contact a {
+        color: #bdbcbc;
+}
 }
 .wrapper{
     background: url($imagesPath + "worship.jpg") center center no-repeat;
@@ -101,6 +118,7 @@
         background-attachment: fixed;
         width: 100%;
     }
+
 }
 .footer {
     .footer-wrapper {
@@ -111,13 +129,14 @@
         text-align: center;
         position: relative;
         align-items: center;
-        width:300px;
+        width:350px;
         margin-left: 300px;
         
-    h3 {
+    a {
         color: black;
-        width: 110px;
+        width: 150px;
         float: left;
+        margin-top: 15px;
     }
     
 }
