--- a/src/component/view/homePage/index.scss
+++ b/src/component/view/homePage/index.scss
@@ -1,6 +1,9 @@
 main {
     position: relative;
     width: 100%;
+    .main{
+        width: 100%;
+    }
     article {
         margin-top: -330px;
         margin-left: 100px;
@@ -101,6 +104,22 @@ body {
         font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
         font-style: oblique;
         color: #b3f0bb;
+        text-shadow: 3px 3px 6px #000000;
+    }
+    .naslov2 {
+        margin-left: 100px;
+}
+}
+.humanities {
+    article {
+        margin-top: -450px;
+    }
+    background: #a4693f;
+    .naslov1, .naslov2{
+        font-size: 50px;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        font-style: oblique;
+        color: #d9dbdb;
         text-shadow: 3px 3px 6px #000000;
     }
     .naslov2 {
