--- a/src/component/widget/ContactBox/index.scss
+++ b/src/component/widget/ContactBox/index.scss
@@ -1,30 +1,33 @@
-.text-box--wrapper-k{
-    padding-left: 60px;
+.form {
+    width: 40%;
     height: max-content;
+    position: relative;
     overflow: hidden;
-    position: relative;
-    width: 94%;
+    float: right;
 }
-
-.content-k {
-    margin-right: 60px;
-    font-size: 18px;
+.form-k {
+    input {
+        width: 95%;
+        height: 25px;
+        border-radius: 5px;
+    }
 }
-
-.content-box-k {
-    width: 100%;
-    background: none;
-    padding: 10px;
-    height: max-content;
-    position: relative;
-    color: black;
-    text-align: center;
+.form-k:last-of-type{
+    input {
+        height: 150px;
+    }
 }
-
-.image {
-    width: 100%;
-    height: 250px;
+.contact-data {
+    float: left;
+    width: 40%;
+    margin-left: 30px;
 }
+.contact-button {
+    height: 25px;
+    border-radius: 5px;
+    margin-top: 20px;
+    font-weight: bold;
 
+}
 
 
