--- a/src/component/widget/ContactBox/index.scss
+++ b/src/component/widget/ContactBox/index.scss
@@ -12,9 +12,11 @@
         border-radius: 5px;
     }
 }
-.form-k:last-of-type{
-    input {
+.form-text{
+    textarea {
         height: 150px;
+        width: 95%;
+        border-radius: 5px;
     }
 }
 .contact-data {
