--- a/src/component/view/homePage/index.scss
+++ b/src/component/view/homePage/index.scss
@@ -43,16 +43,13 @@ main {
         font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
         font-style: italic;
     } 
-    .btn-events {
+    .event-navigation {
         margin-left: 150px;
+        height: 30px;
         font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
         font-style: italic;
-        background: #c7c6c6;
-        padding: 5px 20px 5px 20px;
-        font-size: 24px;
-        margin-top: 10px;
-        width: 70%;
-        display: flex;
+        font-size: 18px;
+        background: #c7c6c6; 
     }
 }
 body {
