--- a/src/index.scss
+++ b/src/index.scss
@@ -7,6 +7,7 @@
 
 @import "component/view/homePage/index";
 @import "component/view/whowearePage/index";
+@import "component/view/eventPage/index";
 @import "component/widget/LoadingSpinner/index";
 @import "component/layout/header/index";
 @import "component/widget/ImageBox/index";
