--- a/src/component/layout/header/index.scss
+++ b/src/component/layout/header/index.scss
@@ -14,12 +14,30 @@
             
             a {
                 color: black;
+                transition: 0.3s;
+                border-radius: 25px;
+            }
+            a:hover {
+                color: white;
+                background:black;
+                border-radius: 25px;
+                opacity: 1;
             }
         }
     }
 
     .menu-navigation {
         text-align: center;
+        a {
+            transition: 0.3s;
+            border-radius: 25px;
+        }
+        a:hover {
+            color: #141416;
+            background:white;
+            border-radius: 25px;
+            opacity: 0.5;
+        }
     }
 
     &.home {
@@ -28,6 +46,12 @@
         background-size: cover;
         background-attachment: fixed;
         width: 100%;
+        a:hover {
+            color: #141416;
+            background:#bfbff5;
+            border-radius: 25px;
+            opacity: 0.5;
+        }
     }
 
     &.whoWeAre {
@@ -36,6 +60,12 @@
         background-size: cover;
         background-attachment: fixed;
         width: 100%;
+        a:hover {
+            color: #141416;
+            background:#cef5bf;
+            border-radius: 25px;
+            opacity: 0.5;
+        }
     }
     &.whoWeAre a {
         color: green;
@@ -48,7 +78,7 @@
         width: 100%;
     }
     &.credo {
-        background: url($imagesPath + "our_believe.jpg") center center no-repeat;
+        background: url($imagesPath + "our_believe.jpg") center 20% no-repeat;
         height: 500px;
         background-size: cover;
         background-attachment: fixed;
@@ -69,7 +99,7 @@
         width: 100%;
     }
     &.humanity {
-        background: url($imagesPath + "LoveGod_LoveOthers.jpg") center center no-repeat;
+        background: url($imagesPath + "LoveGod_LoveOthers.jpg") center 65% no-repeat;
         height: 700px;
         background-size: cover;
         background-attachment: fixed;
@@ -82,6 +112,12 @@
         background-size: cover;
         background-attachment: fixed;
         width: 100%;
+        a:hover {
+            color: #141416;
+            background:white;
+            border-radius: 25px;
+            opacity: 0.8;
+        }
     }
     &.contact a {
         color: #bdbcbc;
