--- a/src/component/view/whowearePage/index.scss
+++ b/src/component/view/whowearePage/index.scss
@@ -24,14 +24,21 @@ main {
         padding: 5px;
     }
     .naslov1, .naslov2{
-        font-size: 50px;
+        font-size: 60px;
         font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-        font-style: oblique;
-        color: #c1dbe8;
+        font-style: italic;
+        color: #83b48f;
+        font-weight: bold;
+        opacity: 0.6;
+        text-shadow: 7px 7px 10px black;
+
     }
     .naslov2 {
         margin-left: 100px;
     }
+    .naslov {
+        margin-top: -430px;
+    } 
     .wrapper-title {
         text-align: center;
         background: #c7c6c6;
